--- a/media/style.css
+++ b/media/style.css
@@ -260,7 +260,8 @@ color: #000;
   background-image: #000;
   font-size: 5em;
   text-align: center;
-  font-family: elephant;
+  font-family: elephant,"Arial Black", Gadget, sans-serif;
+ 
   
 
 }
@@ -331,7 +332,7 @@ color: #000;
   width: auto;
   height: auto;
   color: #fff;
-   font-family: "Cutive Mono", monospace;
+   font-family: "Cutive Mono", monospace,"Comic Sans MS", cursive, sans-serif;
   font-size: 1em;
   text-align: left;
   line-height: 1.5;
