--- a/media/style.css
+++ b/media/style.css
@@ -252,20 +252,24 @@ color: #000;
 
 #name{
   width: 100%;
-  height: auto;
+  height:15%;
   position: absolute;
-  top: 45%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  background-image: #000;
-  font-size: 5em;
+  top: 40%;
+ left:-5%;
+  background:transparent;
+ /* font-size: 5em;
   text-align: center;
-  font-family: elephant,"Arial Black", Gadget, sans-serif;
- 
-  
+  font-family: elephant;
+  */
 
 }
 
+#name1{
+  width: 100%;
+  height: 80%;
+  top: 10%;
+
+}
 #am{
   width: 60%;
   left: 20%;
@@ -487,9 +491,8 @@ color: #000;
 }
 
 #name{
-  /*top: 35%;
-  left: 25%;
-  font-size: 2em;*/
+  top: 35%;
+  font-size: 2em;
 }
 
 
