--- a/media/style.css
+++ b/media/style.css
@@ -203,12 +203,12 @@ color: #000;
 
 
 #home {
-    width: 35%;
+    width: 45%;
     height: 100vh;
     box-shadow: 0px 0px 2px rgba(255,255,255,.5);
     position: absolute;
     top: 0;
-  left: 30%;
+  left: 25%;
     overflow:hidden;
   background-image: url("12.png");
   /*background-size: 1366px 612px;*/
@@ -225,9 +225,9 @@ color: #000;
 
 #pic{
     width: 60%;
-    height: 25%;
+    height: 20%;
     position: absolute;
-    top: 2%;
+    top:10%;
     left:20%;
     box-shadow: 0px 0px 2px rgba(255,255,255,.5);
     background: transparent;
@@ -341,7 +341,7 @@ color: #000;
   text-align: left;
   line-height: 1.5;
   letter-spacing: 1px;
-  margin-left: 5%;
+  margin-left: 7%;
   text-transform: uppercase;
 }
 
@@ -464,6 +464,15 @@ color: #000;
 
 }
 
+@media screen and (max-width: 1300px) {
+#name{
+ transform: scale(1.1);
+
+}
+}
+
+
+
 @media screen and (max-width: 900px) {
 
 #home {
@@ -490,15 +499,11 @@ color: #000;
   left: 0;  
 }
 
-#name{
-  top: 35%;
-  font-size: 2em;
-}
-
-
   #logo{
     right:0%;
+    top: 10px;
     z-index: 4;
+    transform: scale(.85);
 
 }
 .btn-menu{
