--- a/media/style.css
+++ b/media/style.css
@@ -495,6 +495,7 @@ color: #000;
     width: 100%;
     box-shadow: 0px 0px 2px rgba(255,255,255,.5);
     position: absolute;
+  background-image: url("17.png");
     top: 0;
   left: 0;  
 }
@@ -521,6 +522,6 @@ color: #000;
 @media screen and (max-width: 400px) {
 
 .bottombar{
-  font-size: 14px;
+  font-size: 12px;
 }
 }
