--- a/media/style.css
+++ b/media/style.css
@@ -335,7 +335,7 @@ color: #000;
   position: relative;
   width: auto;
   height: auto;
-  color: #fff;
+  color: #000;
    font-family: "Cutive Mono", monospace,"Comic Sans MS", cursive, sans-serif;
   font-size: 1em;
   text-align: left;
