--- a/media/style.css
+++ b/media/style.css
@@ -1,3 +1,15 @@
+@font-face {
+    font-family: 'Cutive Mono';
+    src: url('CutiveMono-Regular.eot');
+    src: url('CutiveMono-Regular.eot?#iefix') format('embedded-opentype'),
+        url('CutiveMono-Regular.woff2') format('woff2'),
+        url('CutiveMono-Regular.woff') format('woff'),
+        url('CutiveMono-Regular.ttf') format('truetype'),
+        url('CutiveMono-Regular.svg#CutiveMono-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
 
 body {
   position: relative;
@@ -6,7 +18,7 @@ body {
     margin: 0;
     background: #000;
     overflow:hidden;
-  /*background-image: url("12.png");*/
+  /*background-image: url("12.jpg");*/
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -210,7 +222,7 @@ color: #000;
     top: 0;
   left: 25%;
     overflow:hidden;
-  background-image: url("17.png");
+  background-image: url("12.jpg");
   /*background-size: 1366px 612px;*/
   /*background-position:50% 0;*/
   background-attachment: fixed;
@@ -335,7 +347,7 @@ color: #000;
   position: relative;
   width: auto;
   height: auto;
-  color: #000;
+  color: #fff;
    font-family: "Cutive Mono", monospace,"Comic Sans MS", cursive, sans-serif;
   font-size: 1em;
   text-align: left;
@@ -367,7 +379,7 @@ color: #000;
     box-shadow: 0px 0px 2px rgba(0,0,0,.5);
     position: absolute;
   left: 5%;
- background-image: url("17.png");
+ background-image: url("12.jpg");
   /*background-size: 1366px 612px;*/
   /*background-position:50% 0;*/
   opacity: 0.8;
@@ -403,7 +415,7 @@ color: #000;
     box-shadow: 0px 0px 2px rgba(0,0,0,.5);
     position: absolute;
   left: 35%;
- background-image: url("17.png");
+ background-image: url("12.jpg");
   /*background-size: 1366px 612px;*/
   /*background-position:50% 0;*/
   background-attachment: fixed;
@@ -437,7 +449,7 @@ color: #000;
     box-shadow: 0px 0px 2px rgba(0,0,0,.5);
     position: absolute;
   left: 48%;
- background-image: url("17.png");
+ background-image: url("12.jpg");
   opacity: 0.8;
   /*background-size: 1366px 612px;*/
   /*background-position:50% 0;*/
@@ -495,7 +507,7 @@ color: #000;
     width: 100%;
     box-shadow: 0px 0px 2px rgba(255,255,255,.5);
     position: absolute;
-  background-image: url("17.png");
+  background-image: url("12.jpg");
     top: 0;
   left: 0;  
 }
