--- a/media/style.css
+++ b/media/style.css
@@ -82,17 +82,6 @@ home section
 .menutext:hover{
   text-decoration: none;
 }
-@media screen and (max-width: 480px) {
- .menutext {
-    display:none;
-
-  }
-  .btn-menu{
-  top: 20px;
-}
-}
-
-
 
 
 .bottombar{
@@ -195,19 +184,19 @@ home section
     opacity: 0;
 }
 #logo{
-    width: 60px;
-    height: 60px;
     position: absolute;
+    width: 80px;
+    height: 80px;
+    top: 30px;
     float: right;
-    top: 5%;
     right:1%;
-  transform: translate(-50%,-50%);
     background: transparent;
+
 }
 
 #logo1{
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 70px;
 }
 
 
@@ -216,7 +205,8 @@ home section
   height:15%;
   position: absolute;
   top: 40%;
- left:-5%;
+ float: left;
+ left: -5%;
   background:transparent;
   display: none;
  /* font-size: 5em;
@@ -388,10 +378,10 @@ home section
     height: auto;
     position:relative;
     top: 10%;
+    left: -10%;
   background:transparent;
   font-size: 2.5em;
-  text-align: center;
-  padding-left: 10%;
+  text-align: right;
   font-family: 'Elephant';
   text-decoration: underline;
   color: #009999;
@@ -436,6 +426,13 @@ home section
 @media screen and (max-width: 1300px) {
 #name{
  transform: scale(1.1);
+
+}
+#logo{
+    right:0%;
+    top: 20px;
+    z-index: 4;
+    transform: scale(.9);
 
 }
 }
@@ -488,7 +485,7 @@ home section
     right:0%;
     top: 20px;
     z-index: 4;
-    transform: scale(.85);
+    transform: scale(.9);
 
 }
 .btn-menu{
