--- a/media/style.css
+++ b/media/style.css
@@ -551,7 +551,7 @@ home section
 #rec{
     width: 95%;
     height: 40px;
-    position:relative;
+    position:absolute;
     /*top: 8vh;*/
     background:transparent;
     color: #fff;
@@ -561,13 +561,19 @@ home section
     padding-left: 5%;
     font-family:cursive, sans-serif;
 }
-
+#recscroll{
+  margin-top: 48px;
+    width: 100%;
+    height: 45vh;
+    overflow-y: scroll; 
+    background:transparent;
+}
 
 #rec1{
     width: 100%;
     height: 80px;
     position:relative;
-    margin-top: 10px;
+    margin-top: 48px;
     background:#0ff;
 }
 
@@ -733,7 +739,7 @@ home section
 
 #Personal{
     width: 50%;
-    height: 48vh;
+    height: 45vh;
     position:relative;
     top: 4vh;
     background:transparent;
@@ -741,7 +747,7 @@ home section
     font-size: 1.4em;
     text-align: left;
     float: left;
-    /*overflow-y: scroll; */
+    overflow-y: scroll; 
     margin-left: -5%;
   font-family: "Cutive Mono", monospace,"Comic Sans MS", cursive, sans-serif;
 
@@ -749,7 +755,7 @@ home section
 
 #Corporate{
     width: 50%;
-    height: 48vh;
+    height: 45vh;
     position:relative;
     top: 4vh;
     background:transparent;
@@ -758,7 +764,7 @@ home section
     color: #fff;
     font-size: 1.4em;
     text-align: right;
-    /*overflow-y: scroll; */
+    overflow-y: scroll; 
   font-family: "Cutive Mono", monospace,"Comic Sans MS", cursive, sans-serif;
 
 }
@@ -831,6 +837,7 @@ home section
   padding-top: 5vh;
   font-size: 1.8em;
   color: #fff;
+  overflow-y: scroll;
   /*font-family: cursive, sans-serif;*/
   font-weight: bold;
 
