--- a/media/style.css
+++ b/media/style.css
@@ -565,6 +565,7 @@ home section
   margin-top: 38px;
     width: 100%;
     height: 42vh;
+    overflow: hidden;
     overflow-y: scroll; 
     background:transparent;
 }
@@ -673,6 +674,7 @@ home section
   margin-top: 48px;
     width: 100%;
     height: 50vh;
+    overflow: hidden;
     overflow-y: scroll; 
     background:transparent;
 }
@@ -747,6 +749,7 @@ home section
     font-size: 1.4em;
     text-align: left;
     float: left;
+    overflow: hidden;
     overflow-y: scroll; 
     margin-left: -5%;
   font-family: "Cutive Mono", monospace,"Comic Sans MS", cursive, sans-serif;
@@ -764,6 +767,7 @@ home section
     color: #fff;
     font-size: 1.4em;
     text-align: right;
+    overflow: hidden;
     overflow-y: scroll; 
   font-family: "Cutive Mono", monospace,"Comic Sans MS", cursive, sans-serif;
 
@@ -837,6 +841,7 @@ home section
   padding-top: 5vh;
   font-size: 1.8em;
   color: #fff;
+  overflow: hidden;
   overflow-y: scroll;
   /*font-family: cursive, sans-serif;*/
   font-weight: bold;
