--- a/media/style.css
+++ b/media/style.css
@@ -562,7 +562,7 @@ home section
     font-family:cursive, sans-serif;
 }
 #recscroll{
-  margin-top: 38px;
+  margin-top: 5vh;
     width: 100%;
     height: 42vh;
     overflow: hidden;
@@ -671,7 +671,7 @@ home section
 }
 
 #plistscroll{
-  margin-top: 48px;
+  margin-top: 8vh;
     width: 100%;
     height: 50vh;
     overflow: hidden;
