--- a/media/style.css
+++ b/media/style.css
@@ -554,7 +554,7 @@ home section
     position:absolute;
     /*top: 8vh;*/
     background:transparent;
-    color: #fff;
+    color: #ff0000;
     font-size: 1.4em;
     text-align: left;
     line-height: 40px;
