--- a/media/style.css
+++ b/media/style.css
@@ -515,6 +515,7 @@ home section
   /*background-size: 1366px 612px;*/
   /*background-position:50% 0;*/
   opacity: 0.8;
+  overflow: hidden;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -562,7 +563,7 @@ home section
     font-family:cursive, sans-serif;
 }
 #recscroll{
-  margin-top: 38px;
+  margin-top: 58px;
     width: 100%;
     height: 42vh;
     overflow-y: scroll; 
@@ -670,7 +671,7 @@ home section
 }
 
 #plistscroll{
-  margin-top: 48px;
+  margin-top: 70px;
     width: 100%;
     height: 50vh;
     overflow-y: scroll; 
@@ -685,6 +686,7 @@ home section
     position: absolute;
   left: 25%;
  background-image: url("12.jpg");
+ overflow: hidden;
   /*background-size: 1366px 612px;*/
   /*background-position:50% 0;*/
   background-attachment: fixed;
