--- a/media/style.css
+++ b/media/style.css
@@ -145,11 +145,11 @@ home section
 
 #hidwork{
   width: 60px;
-  height: 20%;
+  height: 25%;
   margin-top: 10%;
   margin-left: -65px;
  background: transparent;
-  color: #999999;
+  color: #ff0000;
   text-align: center;
   cursor: pointer;
   /*border-bottom: 2px solid #999;*/
