--- a/media/style.css
+++ b/media/style.css
@@ -148,8 +148,8 @@ home section
   height: 25%;
   margin-top: 10%;
   margin-left: -65px;
- background: transparent;
-  color: #ff0000;
+ background: #ff0000;
+  color: #999999;
   text-align: center;
   cursor: pointer;
   /*border-bottom: 2px solid #999;*/
