--- a/media/style.css
+++ b/media/style.css
@@ -25,6 +25,19 @@
     font-display: swap;
 }
 
+@font-face {
+    font-family: 'Comic Sans MS';
+    src: url('ComicSansMS.eot');
+    src: url('ComicSansMS.eot?#iefix') format('embedded-opentype'),
+        url('ComicSansMS.woff2') format('woff2'),
+        url('ComicSansMS.woff') format('woff'),
+        url('ComicSansMS.ttf') format('truetype'),
+        url('ComicSansMS.svg#ComicSansMS') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
 body {
   position: relative;
     height: 100vh;
@@ -479,7 +492,7 @@ home section
   width: auto;
   height: auto;
   color: #fff;
-   font-family: "Cutive Mono", monospace,"Comic Sans MS", cursive, sans-serif;
+   font-family: "Cutive Mono", monospace,"Comic Sans MS", 'Comic Sans MS', sans-serif;
   font-size: 0.94em;
   text-align: left;
   line-height: 1.5;
@@ -557,10 +570,11 @@ home section
     background:transparent;
     color: #fff;
     font-size: 1.4em;
+    letter-spacing: 2px;
     text-align: left;
     line-height: 40px;
     padding-left: 5%;
-    font-family:cursive, sans-serif;
+    font-family:'Comic Sans MS', sans-serif;
 }
 #recscroll{
   margin-top: 33px;
@@ -663,10 +677,11 @@ home section
     color: #fff;
     font-size: 1.9em;
     text-align: center;
+    letter-spacing: 2px;
     line-height: 40px;
     padding-left: 5%;
     text-decoration: underline;
-    font-family:cursive, sans-serif;
+    font-family:'Comic Sans MS', sans-serif;
     z-index: 1;
 }
 
@@ -721,7 +736,7 @@ home section
      margin-top: 7%;
   background:transparent;
   color: #fff;
-  font-family: "Cutive Mono", monospace,"Comic Sans MS", cursive, sans-serif;
+  font-family: "Cutive Mono", monospace,"Comic Sans MS", 'Comic Sans MS', sans-serif;
 
 }
 
@@ -737,7 +752,7 @@ home section
     text-align: right;
     line-height: 60px;
     padding-right:  5%;
-    font-family:cursive, sans-serif;
+    font-family:'Comic Sans MS', sans-serif;
 }
 
 #Personal{
@@ -752,7 +767,7 @@ home section
     float: left;
     overflow-y: scroll; 
     margin-left: -5%;
-  font-family: "Cutive Mono", monospace,"Comic Sans MS", cursive, sans-serif;
+  font-family: "Cutive Mono", monospace,"Comic Sans MS", 'Comic Sans MS', sans-serif;
 
 }
 
@@ -768,7 +783,7 @@ home section
     font-size: 1.4em;
     text-align: right;
     overflow-y: scroll; 
-  font-family: "Cutive Mono", monospace,"Comic Sans MS", cursive, sans-serif;
+  font-family: "Cutive Mono", monospace,"Comic Sans MS", 'Comic Sans MS', sans-serif;
 
 }
 
