--- a/media/style.css
+++ b/media/style.css
@@ -159,9 +159,9 @@ home section
 #hidwork{
   width: 60px;
   height: 25%;
-  margin-top: 10%;
+  margin-top: 20%;
   margin-left: -65px;
- background: #ff0000;
+ background: #0ff;
   color: #999999;
   text-align: center;
   cursor: pointer;
