--- a/media/style.css
+++ b/media/style.css
@@ -161,7 +161,7 @@ home section
   height: 25%;
   margin-top: 20%;
   margin-left: -65px;
- background: #0ff;
+ background: transparent;
   color: #999999;
   text-align: center;
   cursor: pointer;
