--- a/media/style.css
+++ b/media/style.css
@@ -163,6 +163,7 @@ home section
   margin-left: -65px;
  background: #ff0000;
   color: #999999;
+  padding-top: 15%;
   text-align: center;
   cursor: pointer;
   /*border-bottom: 2px solid #999;*/
