--- a/media/style.css
+++ b/media/style.css
@@ -825,8 +825,8 @@ home section
 
 #ctcs{
   width: 100%;
-    height: 40vh;
-     margin-top: 5%;
+  height: 30vh;
+ margin-top: 15vh;
   background:transparent;
    font-size: 1.6em;
   color: #000;
@@ -834,8 +834,8 @@ home section
 }
 #social{
   width: 65%;
-  height: 10vh;
-  margin-top: 15vh;
+  height: 60px;
+  margin-top: 8vh;
   background:#fff;
   float: left;
   font-size: 1.6em;
@@ -844,7 +844,7 @@ home section
 }
 #find{
   width: 30%;
-  height: 35vh;
+  height:100%;
   background:transparent;
   float: right;
   text-align: center;
@@ -852,7 +852,7 @@ home section
   letter-spacing: 2px;
   text-transform: uppercase;
   border-left:2px solid #fff;
-  padding-top: 5vh;
+  /*padding-top: 20vh;*/
   font-size: 1.8em;
   color: #fff;
   overflow-y: scroll;
