--- a/media/style.css
+++ b/media/style.css
@@ -161,7 +161,7 @@ home section
   height: 25%;
   margin-top: 20%;
   margin-left: -65px;
- background: #ff0000;
+ background: transparent;
   color: #999999;
   padding-top: 15%;
   text-align: center;
@@ -833,15 +833,106 @@ home section
 
 }
 #social{
-  width: 65%;
-  height: 60px;
+  width: 68%;
+  height: 100px;
   margin-top: 8vh;
-  background:#fff;
+  background:transparent;
+  overflow: hidden;
   float: left;
-  font-size: 1.6em;
   color: #000;
 
 }
+
+#social-icons{
+  display: flex;
+
+}
+
+#social-icons li{
+
+    list-style-type: none;
+    margin-left:4%;
+
+}
+
+#social-icons li:nth-child(1){
+
+    list-style-type: none;
+    margin-left:0;
+
+}
+
+
+#social-icons li a{
+position: relative;
+width: 60px;
+height: 60px;
+background: #fff;
+text-align: center;
+line-height: 60px;
+font-size: 30px;
+display: block;
+border-radius: 50%;
+overflow: hidden;
+border: 3px solid #fff;
+}
+
+#social-icons li a .fa{
+  position: relative;
+    color: #262626;
+    transition: .5s;
+    z-index: 3;
+
+}
+
+
+#social-icons li a:hover .fa{
+    color: #fff;
+    transform: rotateY(360deg);
+}
+
+
+#social-icons li a:before{
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #f00;
+    transition: .5s;
+    z-index: 2;.
+
+}
+
+#social-icons li a:hover:before{
+  top: 0;
+}
+
+#social-icons li:nth-child(1) a:before{
+      background: #3333ff;
+}
+#social-icons li:nth-child(2) a:before{
+      background: #ff3300;
+
+}
+#social-icons li:nth-child(3) a:before{
+      background: #3b5999;
+
+}
+#social-icons li:nth-child(4) a:before{
+      background: #e95950;
+
+}
+#social-icons li:nth-child(5) a:before{
+      background: #0077B5;
+
+}
+#social-icons li:nth-child(6) a:before{
+      background: #4dc247;
+
+}
+
 #find{
   width: 30%;
   height:100%;
@@ -885,6 +976,35 @@ home section
 }
 }
 
+@media screen and (max-width: 1200px) {
+
+    #social-icons li a{
+      width: 45px;
+      height: 45px;
+      font-size: 25px;
+      line-height: 45px;
+
+    }
+}
+
+@media screen and (max-width: 930px) {
+
+    #social-icons li a{
+      width: 40px;
+      height: 40px;
+      font-size: 22px;
+      line-height: 40px;
+
+    }
+
+    #social-icons li:nth-child(1){
+
+    list-style-type: none;
+    margin-left:-30px;
+
+}
+
+}
 
 
 @media screen and (max-width: 900px) {
