--- a/media/style.css
+++ b/media/style.css
@@ -3,14 +3,17 @@ html{
     overflow: hidden;
 }
 body {
-    height: 100%;
+    position: relative;
+    height: 100vh;
     width: 100%;
     margin: 0;
     background: #000;
-    overflow: hidden;
-  background-position:min-height: ;
+    overflow:hidden;
+  background-attachment: fixed;
+  background-position: center;
   background-repeat: no-repeat;
-  background-size: auto;
+  background-size: cover;
+
 
   }
 
