--- a/media/style.css
+++ b/media/style.css
@@ -399,8 +399,8 @@ top nav
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
-  height: 400%;
-  width: 400%;
+  height: 300%;
+  width: 300%;
   cursor: pointer;
 }
 #explore{
@@ -410,7 +410,7 @@ top nav
   height: 50%;
   width: 100%;
   cursor: pointer;
-  background:transparent;
+  background:#0ff;
 
 }
 #explore-ico{
@@ -421,7 +421,7 @@ top nav
   height: 100%;
   width: 400px;
   cursor: pointer;
-  background:transparent;
+  background:#fff;
 
 }
 #bottomnav{
@@ -504,7 +504,12 @@ top nav
   transition: .5s;
 }
 
-
+/*@media screen and (max-height: 1000px) {
+  #name-svg{
+  height: 250%;
+  width: 250%;
+}
+}*/
 
 
 @media screen and (max-width: 750px) {
